# punchcard

./: .gitignore  CHANGELOG.md  Dockerfile  README.MD  cabal.project  cabal.project.freeze  db.sql  example.dhall  fly.toml  ponsjkort.cabal  punchcard.cabal
app/: Main.hs
lib/: DBClient.hs  Model.hs  UI.hs
static/: styles.css
