cabal-version:   3.4
name:            ponsjkort
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          andrii
maintainer:      25188+unorsk@users.noreply.github.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

executable server
  import:           warnings
  main-is:          Main.hs
  build-depends:
    , base                   ^>=4.17.0.0
    , bytestring
    , dhall
    , lucid2
    , mysql-simple           >=0.4.9
    , resource-pool
    , scotty
    , text
    , time
    , wai-middleware-static

  hs-source-dirs:   app
  default-language: GHC2021
