cabal-version:   3.12
name:            punchcard
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          andrii
maintainer:      25188+unorsk@users.noreply.github.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:             warnings
  default-extensions: OverloadedStrings
  exposed-modules:
    DBClient
    Model
    UI

  build-depends:
    , base           ^>=4.21.0.0
    , bytestring
    , lucid2
    , sqlite-simple
    , text
    , time

  hs-source-dirs:     lib
  default-language:   GHC2024

executable server
  import:             warnings
  default-extensions: OverloadedStrings
  main-is:            Main.hs
  build-depends:
    , base                   ^>=4.21.0.0
    , bytestring
    , lucid2
    , punchcard
    , resource-pool
    , scotty
    , sqlite-simple
    , text
    , time
    , wai-middleware-static

  hs-source-dirs:     app
  default-language:   GHC2024
